Fix header not hiding on mobile devices

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -9,7 +9,7 @@
   .heroContainer {
     position: relative;
     z-index: 2;
-    min-width: 500px;
+    min-width: 300px;
   }
 
   h1 {
