--- a/styles/InnerViewHolder.module.scss
+++ b/styles/InnerViewHolder.module.scss
@@ -1,12 +1,3 @@
-#main {
+main.main {
   margin-left: 300px;
-}
-
-@media (max-width: 1199px) {
-  #header {
-    left: -300px;
-  }
-  #main {
-    margin-left: 0;
-  }
 }
