--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -89,3 +89,14 @@ section {
     }
   }
 }
+
+// Responsive header and menu
+@media (max-width: 1199px) {
+  #header {
+    left: -300px;
+  }
+
+  #main {
+    margin-left: 0;
+  }
+}
